# corner-game

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
game/: __main__.py  app.py  board.py  bot.py  cell.py  checker.py  config.py  gm.py  main.py  player.py
